fix finally spill

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 5rem; /* Verhindert, dass die Topbar Anker-Ziele verdeckt */
   height: 100%;
-    overscroll-behavior: none;
 }
 
 body {
@@ -37,6 +36,7 @@ body {
   background: linear-gradient(75deg, rgb(0, 0, 0), rgb(50, 4, 50));
   height: 100%;
     overscroll-behavior: none;
+    min-height: 100dvh;
 }
 
 
